# norduniclient

./: .gitignore  .gitlab-ci.yml  README.md  norduniclient-package.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
norduniclient/: __init__.py  core.py  exceptions.py  models.py  testing.py
tests/: test_models.py
